menu, statistic pages added